refactor: Implementação de testes